# archlinux-packages

./: .gitignore  PKGBUILDS  README.md  archlinux-builder.sh  builder.sh  community-staging.sh  installscanner.sh  makerpo  mateScript.sh  matebuild.sh  mateclean.sh  pacman-mate-unstable.conf  pkgbuild.sh
atril/: PKGBUILD
atril-gtk3/: PKGBUILD
blueman/: PKGBUILD
caja/: PKGBUILD
caja-dropbox/: PKGBUILD
caja-extensions/: PKGBUILD
caja-extensions-gtk3/: PKGBUILD
caja-gtk3/: PKGBUILD
engrampa/: PKGBUILD
engrampa-gtk3/: PKGBUILD
eom/: PKGBUILD
eom-gtk3/: PKGBUILD
ffmpegthumbnailer-caja/: PKGBUILD  ffmpegthumbnailer-caja.install
galculator/: PKGBUILD
gnome-main-menu/: PKGBUILD
libmate/: PKGBUILD
libmatecanvas/: PKGBUILD
libmatecomponent/: PKGBUILD  libmatecomponent-1.2.1.patch
libmatecomponentui/: PKGBUILD
libmatekbd/: PKGBUILD
libmatekeyring/: PKGBUILD
libmatemixer/: PKGBUILD
libmatenotify/: PKGBUILD
libmateui/: PKGBUILD
libmateweather/: PKGBUILD  libmateweather.install
libmatewnck/: PKGBUILD
liboobs/: PKGBUILD
libxnvctrl/: PKGBUILD
marco/: PKGBUILD
marco-gtk3/: PKGBUILD
mate-applets/: PKGBUILD  (+1 more)
mate-applets-gtk3/: PKGBUILD
mate-netspeed/src/mate-netspeed-1.2.0/: ChangeLog  MATE_NetspeedApplet.server.in.in  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool  mate_netspeed_applet.spec  mate_netspeed_applet.spec.in
mate-netspeed/src/mate-netspeed-1.2.0/autom4te.cache/: output.1  requests  traces.0  traces.1
mate-netspeed/src/mate-netspeed-1.2.0/help/: ChangeLog  Makefile  Makefile.am  Makefile.in  mate_netspeed_applet-C.omf  mate_netspeed_applet-de.omf
mate-netspeed/src/mate-netspeed-1.2.0/help/de/: de.mo
mate-netspeed/src/mate-netspeed-1.2.0/help/el/: el.mo  el.po
mate-netspeed/src/mate-netspeed-1.2.0/help/fr/: fr.mo  fr.po  mate_netspeed_applet.xml
mate-netspeed/src/mate-netspeed-1.2.0/help/pt_BR/: mate_netspeed_applet.xml  pt_BR.mo  pt_BR.po
mate-netspeed/src/mate-netspeed-1.2.0/help/sv/: sv.mo
mate-netspeed/src/mate-netspeed-1.2.0/icons/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/16x16/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/16x16/apps/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/16x16/devices/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/22x22/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/22x22/apps/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/24x24/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/24x24/apps/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/24x24/status/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/32x32/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/32x32/apps/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/48x48/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/48x48/apps/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/scalable/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/icons/scalable/apps/: Makefile  Makefile.in
mate-netspeed/src/mate-netspeed-1.2.0/po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  ar.gmo  ar.po  cs.gmo  cs.po  de.gmo  de.po  el.po  es.po  et.gmo  et.po  eu.po  fi.gmo  fi.po  fr.gmo  fr.po  hu.po  it.gmo  it.po  ja.gmo  ja.po  lt.po  ms.po  nb.po  nl.po  oc.po  pl.po  ps.gmo  ps.po  pt.gmo  pt.po  pt_BR.po  ro.po  ru.gmo  (+7 more)
mate-netspeed/src/mate-netspeed-1.2.0/src/: Makefile  Makefile.am  Makefile.in  backend.c  backend.h  netspeed.c
mate-netspeed/src/mate-netspeed-1.2.0/src/.deps/: backend.Po  netspeed.Po
(+434 files in other folders)
