include $(top_srcdir)/mate-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = mate_netspeed_applet
DOC_ENTITIES = legal.xml
DOC_INCLUDES = 
DOC_FIGURES = \
figures/details.png \
figures/ethernet.png \
figures/eth_sum_48.png \
figures/loopback.png \
figures/mate_netspeed_applet.png \
figures/plip.png \
figures/ppp.png \
figures/settings.png \
figures/wavelan.png

DOC_LINGUAS = de el fr pt_BR sv
# Migration needed (see INSTRUCTIONS http://live.gnome.org/GnomeDocUtilsTranslationMigration)
# DOC_LINGUAS = cs ru es
#
 EXTRA_DIST = INSTRUCTIONS
